--- a/GenericServer.csproj
+++ b/GenericServer.csproj
@@ -4,12 +4,27 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Title>Generic Server</Title>
+    <Authors>Mohamed-Hassan</Authors>
+    <Description>Enhance your ASP.NET Web API projects with this robust and easy-to-use library that provides a generic repository and controller for seamless CRUD operations. This package is designed to simplify the development process by offering out-of-the-box implementation of basic Create, Read, Update, and Delete (CRUD) functionalities, allowing developers to focus more on business logic and less on boilerplate code</Description>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/vodkagamed/Generic_Server/</RepositoryUrl>
+    <Copyright>                    GNU GENERAL PUBLIC LICENSE</Copyright>
+    <PackageTags>ASP.NET; Web API; CRUD; Repository Pattern; Generic Repository; Controller; Entity Framework; API; REST; C#; .NET; Dependency Injection</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
-    <PackageReference Include="Serilog" Version="3.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.*.*" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.*.*" />
+    <PackageReference Include="Serilog" Version="3.*.*" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
