--- a/GenericServer.csproj
+++ b/GenericServer.csproj
@@ -15,9 +15,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.*.*" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.*.*" />
-    <PackageReference Include="Serilog" Version="3.*.*" />
+	  <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
+	  <PackageReference Include="Serilog" Version="3.1.1" />
   </ItemGroup>
 
   <ItemGroup>
